--- a/index.html
+++ b/index.html
@@ -58,9 +58,22 @@
         </div>
     </section>
 
-    <section class="bg_white text-black py-24 relative">
-        <div class="grid grid-cols-3">
-            <img src="" alt="">
+    <section class="bg_white text-black py-24 ">
+        <div class="max-w-6xl mx-auto">
+            <div class="grid grid-cols-2 items-center">
+                <img src="images/Family.svg" class="col-span-1" alt="">
+                <div class="">
+                    <p class="text-6xl creamy">About us</p>
+                    <p class="text-xl">Kids today know about environmental issues but lack a real connection to nature.
+                        The simple joys
+                        of
+                        exploring farms, woods, or parks are disappearing. Many parents underestimate the impact of
+                        staying
+                        indoors and the vital role fathers play in their kids' growth. StepOutWithDad will build a
+                        community
+                        where families can share ideas and support each other.</p>
+                </div>
+            </div>
         </div>
     </section>
 
