--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
         scroll-behavior: smooth;
     }
 
+    .border_brown {
+        border-color: #C37E61;
+    }
+
 </style>
 
 <body class="">
@@ -92,7 +96,29 @@
     </section>
 
     <section class="bg_white text-black py-24 relative">
-        <div class=" pb-32 w-1 absolute left-1/2 top-56" style="background-color:#C1795B; height: 1300px"></div>
+        <div class=" w-1 flex flex-col items-center justify-between absolute left-1/2 top-56"
+            style="background-color:#C1795B; height: 1350px">
+
+            <div class="p-1 border-2  border-black rounded-full border_brown">
+                <div class="p-3 h-2 bg_brown rounded-full"></div>
+            </div>
+            <div class="p-1 border-2  border-black rounded-full border_brown">
+                <div class="p-3 h-2 bg_brown rounded-full"></div>
+            </div>
+            <div class="p-1 border-2  border-black rounded-full border_brown">
+                <div class="p-3 h-2 bg_brown rounded-full"></div>
+            </div>
+            <div class="p-1 border-2  border-black rounded-full border_brown">
+                <div class="p-3 h-2 bg_brown rounded-full"></div>
+            </div>
+            <div class="p-1 border-2  border-black rounded-full border_brown">
+                <div class="p-3 h-2 bg_brown rounded-full"></div>
+            </div>
+            <div class="p-1 border-2  border-black rounded-full border_brown">
+                <div class="p-3 h-2 bg_brown rounded-full"></div>
+            </div>
+
+        </div>
         <div class="max-w-6xl mx-auto">
             <p class="text-6xl text-center creamy">How it started</p>
             <div class="grid grid-cols-3 mt-12">
