add mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -54,49 +54,46 @@
 </style>
 
 <body class="">
-    <div class="fixed top-0 bg-white p-2 w-screen shadow-md z-40">
+    <div class="fixed top-0 bg-white px-4 md:px-2 py-2 w-screen shadow-md z-40">
         <div class="max-w-6xl mx-auto flex justify-between">
             <img src="images/logo.svg" alt="">
             <div class="flex items-center justify-center space-x-6">
                 <a href="#home">Home</a>
-                <a href="">Blog</a>
+                <a href="#blog">Blog</a>
             </div>
         </div>
 
     </div>
     <section class=" bg_green text_white" style="background-image: url(images/Background/scenery.svg) ;" id="home">
-        <div class="pt-32 max-w-6xl mx-auto flex items-center space-x-4">
-            <div class="space-y-4 max-w-xl">
-                <h1 class="text-6xl creamy">Understanding our children starts with every step we take together.</h1>
-                <p class="text-xl">Join us on the beautiful journey of parenthood. Learn and grow, as we share our
-                    moments
-                    with you.</p>
+        <div class="pt-32 max-w-6xl mx-auto md:flex items-center space-x-4">
+            <div class="space-y-4 max-w-xl px-4 md:px-0">
+                <h1 class="text-5xl md:text-6xl creamy"> Nurturing young spirits in Nature's sanctuary.
+                </h1>
+                <p class="text-xl">We are exploring ways to reclaim childhood & reconnect with nature. We'd love to
+                    bring you along.</p>
             </div>
-            <img src="images/Hero.png" alt="">
+            <img src="images/Hero.png" class="" alt="">
         </div>
     </section>
 
-    <section class="bg_white text-black py-24 ">
+    <section class="bg_white text-black py-24 px-4 md:px-0">
         <div class="max-w-6xl mx-auto">
-            <div class="grid grid-cols-2 items-center">
+            <div class="grid grid-cols-1 md:grid-cols-2 items-center">
                 <img src="images/Family.svg" class="col-span-1" alt="">
                 <div class="">
-                    <p class="text-6xl creamy">About us</p>
-                    <p class="text-xl">Kids today know about environmental issues but lack a real connection to nature.
-                        The simple joys
-                        of
-                        exploring farms, woods, or parks are disappearing. Many parents underestimate the impact of
-                        staying
-                        indoors and the vital role fathers play in their kids' growth. StepOutWithDad will build a
-                        community
-                        where families can share ideas and support each other.</p>
+                    <p class="text-5xl md:text-6xl creamy">About us</p>
+                    <p class="text-xl">Our aim is to be intentional about nature time, and to balance out increasingly
+                        pervasive screen culture. Nature is an antidote to many modern problems and can help children to
+                        develop in a whole self way: Emotionally, Cognitively, Socially, and Physically. Dads have a
+                        pivotal, not optional, role here to play. Just need to show up and remember our world for
+                        generations to come.</p>
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="bg_white text-black py-24 relative">
-        <div class=" w-1 flex flex-col items-center justify-between absolute left-1/2 top-56"
+    <section class="bg_white text-black py-24 relative px-4 md:px-0">
+        <div class=" w-1 hidden md:flex flex-col items-center justify-between absolute left-1/2 top-56"
             style="background-color:#C1795B; height: 1350px">
 
             <div class="p-1 border-2  border-black rounded-full border_brown">
@@ -120,21 +117,16 @@
 
         </div>
         <div class="max-w-6xl mx-auto">
-            <p class="text-6xl text-center creamy">How it started</p>
-            <div class="grid grid-cols-3 mt-12">
+            <p class="text-5xl md:text-6xl text-center creamy">How it started</p>
+            <div class="grid grid-cols-1 md:grid-cols-3 mt-12">
                 <div class="space-y-2">
                     <p class="text-4xl creamy">Couchland Kingdom</p>
-                    <p class="text-xl">Once upon a time, in a kingdom called <B>Couchland</B>, parents and kids were
-                        trapped in a world
-                        of
-                        screens
-                        and schedules. But a father and his daughter, armed with curiosity and courage, set out to break
-                        the
-                        spell by rediscovering the
-                        joys of the outdoors.</p>
+                    <p class="text-xl">Once upon a time, in a kingdom of Couchland, parents and kids were trapped in a
+                        world of screens and schedules. But a father and his daughter, armed with curiosity and
+                        initiative, set out to break the spell by rediscovering the joys of the outdoors.</p>
                 </div>
             </div>
-            <div class="grid grid-cols-3 mt-12">
+            <div class="grid grid-cols-1 md:grid-cols-3 mt-12">
                 <div class=""></div>
                 <div class=""></div>
                 <div class="space-y-2">
@@ -145,105 +137,111 @@
                         joy and connection. </p>
                 </div>
             </div>
-            <div class="grid grid-cols-3 mt-12">
+            <div class="grid grid-cols-1 md:grid-cols-3 mt-12">
                 <div class="space-y-2">
                     <p class="text-3xl creamy">The Forest of Doubts</p>
-                    <p class="text-xl">As they journeyed through the Forest of Doubts, they encountered whispers of
-                        worry: 'What if it’s
-                        too hard?' 'What if I fail?' But with every shared story and practical tip, the worries faded
-                        like morning mist.</p>
+                    <p class="text-xl">As they hiked through the Forest of Doubts, they encountered whispers of worry:
+                        'What if it’s too hard?' 'What if I fail?' But with every shared story and idea, the worries
+                        faded like morning mist.</p>
                 </div>
             </div>
-            <div class="grid grid-cols-3 mt-12">
+            <div class="grid grid-cols-1 md:grid-cols-3 mt-12">
                 <div class=""></div>
                 <div class=""></div>
                 <div class="space-y-2">
                     <p class="text-3xl creamy">The Campfire of Connection</p>
-                    <p class="text-xl">By the light of the Campfire of Connection, they realized that bonding with kids
-                        outdoors doesn’t
-                        require perfection—only presence. Around the fire, stories and laughter echoed, creating
-                        memories that would last a lifetime. </p>
+                    <p class="text-xl">By the glow of the Campfire of Connection, they could see that bonding with kids
+                        outdoors doesn’t require perfection—only presence. As the fire crackled and popped, stories and
+                        laughter filled the air, forging memories for a lifetime. </p>
                 </div>
             </div>
-            <div class="grid grid-cols-3 mt-12">
+            <div class="grid grid-cols-1 md:grid-cols-3 mt-12">
                 <div class="space-y-2">
                     <p class="text-3xl creamy">The Valley of Community</p>
-                    <p class="text-xl">Their journey led them to the Valley of Community, where families gathered to
-                        share tales of
-                        their adventures, offer tips, and inspire one another to keep exploring the world outside.</p>
+                    <p class="text-xl">They finally stopped at the Valley of Community, where families gathered to share
+                        tales of their adventures and inspire one another to keep exploring the world outside.</p>
                 </div>
             </div>
-            <div class="grid grid-cols-3 mt-12">
+            <div class="grid grid-cols-1 md:grid-cols-3 mt-12">
                 <div class=""></div>
                 <div class=""></div>
                 <div class="space-y-2">
                     <p class="text-3xl creamy">The Treasure – Nature’s Lifeline</p>
-                    <p class="text-xl">At last, they uncovered the Treasure of Nature’s Lifeline—a map that reminded
-                        every parent that
-                        nature is always there, waiting to heal, recharge, and reconnect families in simple, powerful
-                        ways. </p>
+                    <p class="text-xl">Finally, they discovered the Treasure of Nature’s Lifeline- a panacea that can
+                        heal, recharge, and reconnect families through simple yet powerful ways. </p>
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="bg_brown text_white" style="background-image: url(images/Background/topography.svg) ;">
-        <div class="max-w-6xl mx-auto pt-24 pb-56 relative">
-            <p class="text-6xl text-center creamy">52 Wild Weekends</p>
-            <img class="absolute bottom-0 right-0" src="images/daughter.svg" alt="">
-            <div class="grid grid-cols-3 gap-2 mt-12">
+    <section class="bg_brown text_white relative" style="background-image: url(images/Background/topography.svg) ;">
+        <div class="max-w-6xl mx-auto pt-24 pb-56 ">
+            <p class="text-5xl md:text-6xl text-center creamy">52 Wild Weekends</p>
+            <img class="absolute bottom-0 right-32" src="images/daughter.svg" alt="">
+            <div class="grid md:grid-cols-3 gap-2 mt-12 px-2 md:px-0">
                 <div class="bg_white rounded-3xl p-8 text-center space-y-4 text-black">
-                    <p class="text-2xl">What</p>
-                    <p class="text-xl text-left">52 Wild Weekends is a fun challenge for parents to spend more time
-                        outdoors with
-                        their
-                        kids.</p>
+                    <p class="text-4xl creamy">What</p>
+                    <p class="text-xl text-left">WWC is a fun challenge for parents, caregivers, and anyone who wants to
+                        reconnect with nature, strengthen family bonds, and slow down.</p>
                 </div>
                 <div class="bg_white rounded-3xl p-8 text-center space-y-4 text-black">
-                    <p class="text-2xl">Goal</p>
-                    <p class="text-xl text-left">The goal is to use all 52 weekends in a year to help kids spend less
-                        time on
-                        screens and
-                        more time with nature.</p>
+                    <p class="text-4xl creamy">Goal</p>
+                    <p class="text-xl text-left">Utilise all 52 weekends in a year to strike a balance between your
+                        screen time and nature time, and spend time with loved ones.</p>
                 </div>
                 <div class="bg_white rounded-3xl p-8 text-center space-y-4 text-black">
-                    <p class="text-2xl">Why</p>
-                    <p class="text-xl text-left">It’s not about forcing kids to stay outside all the time, but rather
-                        about
-                        finding ways
-                        to make outdoor time a part of our family routine and bond with our kids..</p>
+                    <p class="text-4xl creamy">Why</p>
+                    <p class="text-xl text-left">By finding the magic in the ordinary, we truly connect with family,
+                        with our kids, and with ourselves.</p>
                 </div>
             </div>
+            <div class="flex items-center justify-center">
+                <a href=""
+                    class="mt-4 space-x-4 border rounded-full px-16 py-4  hover:text-white transition delay-45 max-w-xs">
+
+                    <p class="text-xl">Know more</p>
+                </a>
+            </div>
+
         </div>
+
     </section>
 
-    <section class="bg_white text-black py-24 relative" style="background-image: url(images/Background/hearts.svg) ;">
+    <section class="bg_white text-black py-24 px-2 md:px-0 relative"
+        style="background-image: url(images/Background/hearts.svg) ;">
         <!-- <img class="absolute top-0 z-10" src="images/Background/hearts.svg" alt=""> -->
-        <div class="max-w-4xl mx-auto py-16 px-32  bg-white rounded-3xl z-40">
+        <div class="max-w-4xl mx-auto py-16 px-4 md:px-32  bg-white rounded-3xl z-40">
             <img src="images/Dad&Daughter.svg" class="mx-auto mb-12" alt="">
-            <p class="text-6xl mb-8 creamy">Dear Parents,</p>
+            <p class="text-5xl md:text-6xl mb-8 creamy">The Open Letter</p>
             <div class="space-y-4 text-xl">
+                <p>Dear Readers,</p>
+                <p>In our fast-paced world, it’s easy to forget the simple pleasures of childhood and the enchanting
+                    magic of nature. But imagine a life where weekends aren’t just a break from routine—they’re a portal
+                    to endless adventures, personal growth, and deep connections.</p>
 
-                <p>We often think of play as fun but not essential. With busy lives, it’s easy to skip the laughter,
-                    mess,
-                    and silly moments. We focus on work, schedules, and goals. But here’s the truth: play is a lifeline.
-                    It’s not a break from parenting—it’s the heart of it. Through play, we build bonds, spark
-                    imagination,
-                    and help our kids grow.</p>
+                <p>We’re thrilled to invite you to join us on an extraordinary journey: the 52 Wild Weekends Challenge.
+                    This isn’t just a challenge; it’s a call to reclaim the wonder of childhood and rediscover the
+                    healing power of nature, one weekend at a time.</p>
 
-                <p>Life is overwhelming. Dads get buried in work, and moms juggle endless tasks and emotions. In the
-                    chaos,
-                    our kids wait. It’s not about being perfect; it’s about showing up. Small moments matter more than
-                    you
-                    think.</p>
+                <p>The idea is simple: each weekend of the year, let’s step outside, explore the great outdoors, and
+                    create unforgettable memories. Whether it’s hiking through a lush forest, camping under the starlit
+                    sky, or simply having a picnic in a local park, these moments can transform how we experience
+                    life—with wonder, courage, and joy.</p>
 
-                <p>So, take a break. Step outside. Play, laugh, explore. Bond.
-                    Your child doesn’t need a perfect parent—they just need you.</p>
-
-                <p>Follow us on Instagram & Facebook and join the 52 Wild Weekends challenge. Let’s make memories
-                    together!
+                <p>This challenge isn’t just for kids. It’s for parents, caregivers, and anyone who wants to reconnect
+                    with nature, strengthen family bonds, and slow down. You’ll find that these weekends won’t just
+                    change your perspective—they’ll transform the way you live and connect with your loved ones.
                 </p>
 
+                <p>Each week, we’ll share inspiration, tips, and stories to guide your wild weekend adventures.
+                    Together, we’ll create a movement of people stepping away from the ordinary and embracing the
+                    extraordinary.</p>
+
+                <p>So, are you ready to say yes to 52 weekends of discovery, laughter, and wild adventures? Let’s embark
+                    on this incredible journey together and make every weekend count.</p>
+
+                <p>Here’s to reclaiming childhood and reconnecting with nature—one wild weekend at a time.Step Out
+                    with hope and Follow us on:</p>
 
             </div>
             <div class="flex items-center justify-center space-x-4 mt-16">
@@ -266,6 +264,45 @@
             </div>
         </div>
     </section>
+
+    <section class="bg_green py-24 text_white" id="blog">
+        <p class="text-5xl md:text-6xl creamy text-center">Picks to read</p>
+        <div class="md:flex items-center justify-center space-x-6 mt-12">
+            <img src="images/tree.svg" alt="">
+            <div class="text-3xl text-center md:text-left mt-6 md:mt-0">Coming soon.</div>
+        </div>
+    </section>
+
+    <div class="bg-white p-2 w-screen shadow-md z-40">
+        <div class="max-w-6xl mx-auto md:flex justify-between space-x-4 md:space-x-0">
+            <div class="flex items-center justify-center space-x-2">
+                <img src="images/logo.svg" alt="">
+                <p class="text-xs md:text-sm">© 2025. Stepoutwithdad. All rights reserved.</p>
+            </div>
+
+            <div class="flex items-center justify-center space-x-2">
+                <a href=""
+                    class="flex items-center justify-center space-x-4 border rounded-full px-4 py-4 hover:bg-gray-800 hover:text-white transition delay-45">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-4 md:h-6 fill-current" viewBox="0 0 24 24">
+                        <path
+                            d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v3.385z" />
+                    </svg>
+                </a>
+                <a href=""
+                    class="flex items-center justify-center space-x-4 border rounded-full px-4 py-4 hover:bg-gray-800 hover:text-white transition delay-45">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-4 md:h-6 fill-current" viewBox="0 0 24 24">
+                        <path
+                            d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z" />
+                    </svg>
+                </a>
+                <a href=""
+                    class="flex items-center justify-center space-x-4 border rounded-full px-4 py-4 hover:bg-gray-800 hover:text-white transition delay-45">
+                    <img src="images/strava.svg" class="h-6 fill-current" alt="">
+                </a>
+            </div>
+        </div>
+
+    </div>
 </body>
 
 </html>
