--- a/index.html
+++ b/index.html
@@ -121,9 +121,11 @@
             <div class="grid grid-cols-1 md:grid-cols-3 mt-12">
                 <div class="space-y-2">
                     <p class="text-4xl creamy">Couchland Kingdom</p>
-                    <p class="text-xl">Once upon a time, in a kingdom of Couchland, parents and kids were trapped in a
-                        world of screens and schedules. But a father and his daughter, armed with curiosity and
-                        initiative, set out to break the spell by rediscovering the joys of the outdoors.</p>
+                    <p class="text-xl">Once upon a time, in a kingdom of <b>Couchland</b>, parents and kids were trapped
+                        in a
+                        <b>world of screens</b> and schedules. But a father and his daughter, armed with curiosity and
+                        initiative, set out to break the spell by rediscovering the <b>joys of the outdoors.</b>
+                    </p>
                 </div>
             </div>
             <div class="grid grid-cols-1 md:grid-cols-3 mt-12">
@@ -131,18 +133,22 @@
                 <div class=""></div>
                 <div class="space-y-2">
                     <p class="text-3xl creamy">The Gate of Small Steps</p>
-                    <p class="text-xl">The duo stumbled upon the Gate of Small Steps, guarded by the myth that outdoor
+                    <p class="text-xl">The duo stumbled upon the <B>Gate of Small Steps</B>, guarded by the myth that
+                        outdoor
                         adventures must
                         be grand and perfect. But they discovered that even tiny steps outside could unlock moments of
-                        joy and connection. </p>
+                        <b>joy and connection.</b>
+                    </p>
                 </div>
             </div>
             <div class="grid grid-cols-1 md:grid-cols-3 mt-12">
                 <div class="space-y-2">
                     <p class="text-3xl creamy">The Forest of Doubts</p>
-                    <p class="text-xl">As they hiked through the Forest of Doubts, they encountered whispers of worry:
-                        'What if it’s too hard?' 'What if I fail?' But with every shared story and idea, the worries
-                        faded like morning mist.</p>
+                    <p class="text-xl">As they hiked through the <b>Forest of Doubts</b>, they encountered whispers of
+                        worry:
+                        'What if it’s too hard?' 'What if I fail?' But with every shared story and idea, the
+                        <b>worries faded</b> like morning mist.
+                    </p>
                 </div>
             </div>
             <div class="grid grid-cols-1 md:grid-cols-3 mt-12">
@@ -150,16 +156,20 @@
                 <div class=""></div>
                 <div class="space-y-2">
                     <p class="text-3xl creamy">The Campfire of Connection</p>
-                    <p class="text-xl">By the glow of the Campfire of Connection, they could see that bonding with kids
-                        outdoors doesn’t require perfection—only presence. As the fire crackled and popped, stories and
+                    <p class="text-xl">By the glow of the <B>Campfire of Connection,</B> they could see that <b>bonding
+                            with kids
+                            outdoors</b> doesn’t require perfection—only presence. As the fire crackled and popped,
+                        stories and
                         laughter filled the air, forging memories for a lifetime. </p>
                 </div>
             </div>
             <div class="grid grid-cols-1 md:grid-cols-3 mt-12">
                 <div class="space-y-2">
                     <p class="text-3xl creamy">The Valley of Community</p>
-                    <p class="text-xl">They finally stopped at the Valley of Community, where families gathered to share
-                        tales of their adventures and inspire one another to keep exploring the world outside.</p>
+                    <p class="text-xl">They finally stopped at the <B>Valley of Community</B>, where families gathered
+                        to share
+                        <b>tales of their adventures</b> and inspire one another to keep exploring the world outside.
+                    </p>
                 </div>
             </div>
             <div class="grid grid-cols-1 md:grid-cols-3 mt-12">
@@ -167,7 +177,9 @@
                 <div class=""></div>
                 <div class="space-y-2">
                     <p class="text-3xl creamy">The Treasure – Nature’s Lifeline</p>
-                    <p class="text-xl">Finally, they discovered the Treasure of Nature’s Lifeline- a panacea that can
+                    <p class="text-xl">Finally, they discovered the <b>Treasure of Nature’s Lifeline</b> - a panacea
+                        that
+                        can
                         heal, recharge, and reconnect families through simple yet powerful ways. </p>
                 </div>
             </div>
@@ -175,23 +187,27 @@
     </section>
 
     <section class="bg_brown text_white relative" style="background-image: url(images/Background/topography.svg) ;">
-        <div class="max-w-6xl mx-auto pt-24 pb-56 ">
+        <div class="max-w-6xl mx-auto pt-24 md:pb-56 pb-80 ">
             <p class="text-5xl md:text-6xl text-center creamy">52 Wild Weekends</p>
             <img class="absolute bottom-0 right-32" src="images/daughter.svg" alt="">
             <div class="grid md:grid-cols-3 gap-2 mt-12 px-2 md:px-0">
                 <div class="bg_white rounded-3xl p-8 text-center space-y-4 text-black">
                     <p class="text-4xl creamy">What</p>
-                    <p class="text-xl text-left">WWC is a fun challenge for parents, caregivers, and anyone who wants to
+                    <p class="text-xl text-justify md:text-left ">WWC is a fun challenge for parents,
+                        caregivers, and anyone
+                        who wants to
                         reconnect with nature, strengthen family bonds, and slow down.</p>
                 </div>
                 <div class="bg_white rounded-3xl p-8 text-center space-y-4 text-black">
                     <p class="text-4xl creamy">Goal</p>
-                    <p class="text-xl text-left">Utilise all 52 weekends in a year to strike a balance between your
+                    <p class="text-xl text-justify md:text-left">Utilise all 52 weekends in a year to strike a balance
+                        between your
                         screen time and nature time, and spend time with loved ones.</p>
                 </div>
                 <div class="bg_white rounded-3xl p-8 text-center space-y-4 text-black">
                     <p class="text-4xl creamy">Why</p>
-                    <p class="text-xl text-left">By finding the magic in the ordinary, we truly connect with family,
+                    <p class="text-xl text-justify md:text-left">By finding the magic in the ordinary, we truly connect
+                        with family,
                         with our kids, and with ourselves.</p>
                 </div>
             </div>
