add content changes

--- a/index.html
+++ b/index.html
@@ -82,11 +82,10 @@
                 <img src="images/Family.svg" class="col-span-1" alt="">
                 <div class="">
                     <p class="text-5xl md:text-6xl creamy">About us</p>
-                    <p class="text-xl">Our aim is to be intentional about nature time, and to balance out increasingly
-                        pervasive screen culture. Nature is an antidote to many modern problems and can help children to
-                        develop in a whole self way: Emotionally, Cognitively, Socially, and Physically. Dads have a
-                        pivotal, not optional, role here to play. Just need to show up and remember our world for
-                        generations to come.</p>
+                    <p class="text-xl">Our aim is to be intentional about nature time, and to balance out pervasive
+                        screen culture. Nature is a solution to many modern problems and can help children to develop in
+                        a whole self way. Dads have a pivotal, not optional, role here to play. Only need to show up for
+                        our world for generations to come. </p>
                 </div>
             </div>
         </div>
@@ -121,10 +120,13 @@
             <div class="grid grid-cols-1 md:grid-cols-3 mt-12">
                 <div class="space-y-2">
                     <p class="text-4xl creamy">Couchland Kingdom</p>
-                    <p class="text-xl">Once upon a time, in a kingdom of <b>Couchland</b>, parents and kids were trapped
+                    <p class="text-xl">Once upon a time, in a <b>kingdom of Couchland</b>, parents and kids were
+                        trapped
                         in a
-                        <b>world of screens</b> and schedules. But a father and his daughter, armed with curiosity and
-                        initiative, set out to break the spell by rediscovering the <b>joys of the outdoors.</b>
+                        <b>world of screens</b> and schedules. Only rediscovering the rituals of the outdoors can break
+                        the spell. A father and his daughter stepped out armed with arrows of <b>curiosity and
+                            initiative.</b>
+
                     </p>
                 </div>
             </div>
@@ -132,22 +134,24 @@
                 <div class=""></div>
                 <div class=""></div>
                 <div class="space-y-2">
-                    <p class="text-3xl creamy">The Gate of Small Steps</p>
-                    <p class="text-xl">The duo stumbled upon the <B>Gate of Small Steps</B>, guarded by the myth that
-                        outdoor
-                        adventures must
-                        be grand and perfect. But they discovered that even tiny steps outside could unlock moments of
-                        <b>joy and connection.</b>
+                    <p class="text-3xl creamy">Gate of Small Steps</p>
+                    <p class="text-xl">The duo reached the <B>Gate of Small Steps</B>. Guarded by the myth that
+                        <b>outdoor
+                            adventures</b> must
+                        be perfect, way beyond looked dim and hazy. But they discovered the key of <b>joy and
+                            connection</b> which unlocked the door head.
+
                     </p>
                 </div>
             </div>
             <div class="grid grid-cols-1 md:grid-cols-3 mt-12">
                 <div class="space-y-2">
-                    <p class="text-3xl creamy">The Forest of Doubts</p>
+                    <p class="text-3xl creamy">Forest of Doubts</p>
                     <p class="text-xl">As they hiked through the <b>Forest of Doubts</b>, they encountered whispers of
                         worry:
-                        'What if it’s too hard?' 'What if I fail?' But with every shared story and idea, the
-                        <b>worries faded</b> like morning mist.
+                        'What if it’s too hard?' 'What if I fail?'. Father looked in the bag of items given by villagers
+                        before leaving for the journey. He pulled the torch of <b>shared stories</b> and worries faded
+                        like morning mist.
                     </p>
                 </div>
             </div>
@@ -155,20 +159,22 @@
                 <div class=""></div>
                 <div class=""></div>
                 <div class="space-y-2">
-                    <p class="text-3xl creamy">The Campfire of Connection</p>
-                    <p class="text-xl">By the glow of the <B>Campfire of Connection,</B> they could see that <b>bonding
-                            with kids
-                            outdoors</b> doesn’t require perfection—only presence. As the fire crackled and popped,
-                        stories and
-                        laughter filled the air, forging memories for a lifetime. </p>
+                    <p class="text-3xl creamy">Campfire of Connection</p>
+                    <p class="text-xl">At night, sitting by the campfire, he wrote in the sand below, <b>'It doesn't
+                            need
+                            to be perfect,</b> just be there,' while looking at the child's face and the stars above.
+                    </p>
                 </div>
             </div>
             <div class="grid grid-cols-1 md:grid-cols-3 mt-12">
                 <div class="space-y-2">
-                    <p class="text-3xl creamy">The Valley of Community</p>
-                    <p class="text-xl">They finally stopped at the <B>Valley of Community</B>, where families gathered
-                        to share
-                        <b>tales of their adventures</b> and inspire one another to keep exploring the world outside.
+                    <p class="text-3xl creamy">Valley of Community</p>
+                    <p class="text-xl">In the morning, they halted at the Valley of Community, a vibrant hub where
+                        families gathered to exchange stories of raising children. Laughter and joy filled the air as
+                        parents shared their <b>triumphs and challenges</b>. Everyone was happy to be back, free from
+                        the
+                        spell's grip.
+
                     </p>
                 </div>
             </div>
@@ -176,11 +182,10 @@
                 <div class=""></div>
                 <div class=""></div>
                 <div class="space-y-2">
-                    <p class="text-3xl creamy">The Treasure – Nature’s Lifeline</p>
-                    <p class="text-xl">Finally, they discovered the <b>Treasure of Nature’s Lifeline</b> - a panacea
-                        that
-                        can
-                        heal, recharge, and reconnect families through simple yet powerful ways. </p>
+                    <p class="text-3xl creamy">The Panacea</p>
+                    <p class="text-xl">Desperate to learn how to break the curse, they pleaded for the spellbreaker.
+                        Each voice echoed the same question – 'What is the panacea?' The father smiled, a knowing glint
+                        in his eyes. He raised a sprig of cedar leaves aloft.<b>'Nature,' he declared.</b> </p>
                 </div>
             </div>
         </div>
@@ -256,8 +261,9 @@
                 <p>So, are you ready to say yes to 52 weekends of discovery, laughter, and wild adventures? Let’s embark
                     on this incredible journey together and make every weekend count.</p>
 
-                <p>Here’s to reclaiming childhood and reconnecting with nature—one wild weekend at a time.Step Out
-                    with hope and Follow us on:</p>
+                <p>Here’s to reclaiming childhood and reconnecting with nature—one wild weekend at a time.</p>
+
+                <p>Step Out with hope and Follow us on:</p>
 
             </div>
             <div class="flex items-center justify-center space-x-4 mt-16">
