--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Step out with dad</title>
-    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -54,18 +54,21 @@
 </style>
 
 <body class="">
-    <div class="fixed top-0 bg-white px-4 md:px-2 py-2 w-screen shadow-md z-40">
-        <div class="max-w-6xl mx-auto flex justify-between">
-            <img src="images/logo.svg" alt="">
-            <div class="flex items-center justify-center space-x-6">
-                <a href="#home">Home</a>
-                <a href="#blog">Blog</a>
+    <div class="fixed top-0 left-0 w-full z-40">
+        <div class="bg-white/10 backdrop-blur-md shadow-md px-4 md:px-12 py-2 max-w-6xl mx-auto my-2 rounded-3xl">
+            <div class="max-w-6xl mx-auto flex justify-between items-center">
+                <img src="images/logo.svg" alt="Logo">
+                <div class="flex items-center space-x-6 text-white">
+                    <a href="#home" class="hover:underline">Home</a>
+                    <a href="#blog" class="hover:underline">Blog</a>
+                    <a href="52WildWeekends.html" class="hover:underline">52 Wild Weekends</a>
+                </div>
             </div>
         </div>
-
     </div>
+
     <section class=" bg_green text_white" style="background-image: url(images/Background/scenery.svg) ;" id="home">
-        <div class="pt-32 max-w-6xl mx-auto md:flex items-center space-x-4">
+        <div class="pt-32 max-w-6xl mx-auto md:flex items-center justify-between">
             <div class="space-y-4 max-w-xl px-4 md:px-0">
                 <h1 class="text-5xl md:text-6xl creamy"> Nurturing young spirits in Nature's sanctuary.
                 </h1>
